--- a/index.html
+++ b/index.html
@@ -1,37 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Order summary card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="style.css">
+  <title>Dev André Santos</title>
 </head>
 <body>
-
-  Order Summary
-
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
+ 
+  <div class="container">  <!-- essa Div quer dizer onde se inicia o container-->
+    <div class="hero">    <!-- Essa div se refere a imgem de ilustração hero-->
+      <img src="images/illustration-hero.svg" alt="img hero">  <!-- Imagem usada na div hero-->
+    </div>
+    <div class="text-content"> <!-- Div usada para material dentro do container-->
+      <h2 class="title">  <!-- Título do container-->
+        Order Summary
+      </h2>
+      <p class="subtitle">  <!-- Subtitulo do texto principal (h2) acima-->
+        You can now listen to millions of songs, audiobooks, and podcasts on any 
   device anywhere you like!
-
-  Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+      </p>
+      <div class="plan-box">  <!-- Div da area de plano do box de plano anual e valor-->
+        <div class="plan-box left"> <!-- Div referente ao objeto que vai ficar na esquerda, Icone de musica no caso-->
+          <img src="images/icon-music.svg" alt="Img music"> <!-- Imagem usada para o plano box-->
+          <div>
+            <h5>Annual Plan</h5> <!--Tag referente a Plano anual-->
+            <p> $59.99/year</p>  <!-- Valor referente a o plano-->
+            
+          </div>
+        </div>
+      </div>
+      <a href="#">Change</a> <!-- Tag fora da div plan-box mas dentro do container -->
+    </div> <!-- Div para procedimento de pagamento ou cancelamento-->
+    <a href="#" class="proced-btn">Proceed to Payment</a>  <!-- Processo de pagamento usando a.proced-btn-->
+    <a href="#" class="proced-cancel">Cancel Order</a>  <!-- processo de cancelamento usando a.proced-cancel-->
   </div>
+
 </body>
 </html>
