atualização do site

--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
           </div>
         </div>
       </div>
-      <a href="#">Change</a> <!-- Tag fora da div plan-box mas dentro do container -->
-    </div> <!-- Div para procedimento de pagamento ou cancelamento-->
-    <a href="#" class="proced-btn">Proceed to Payment</a>  <!-- Processo de pagamento usando a.proced-btn-->
-    <a href="#" class="proced-cancel">Cancel Order</a>  <!-- processo de cancelamento usando a.proced-cancel-->
+      <div>
+        <a href="#">Change</a>
+      </div> <!-- Tag fora da div plan-box mas dentro do container -->
+      <a href="#" class="proced-btn">Proceed to Payment</a>  <!-- Processo de pagamento usando a.proced-btn-->
+      <a href="#" class="proced-cancel">Cancel Order</a>  <!-- processo de cancelamento usando a.proced-cancel-->
+    </div> 
   </div>
-
 </body>
 </html>
