--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   device anywhere you like!
       </p>
       <div class="plan-box">  <!-- Div da area de plano do box de plano anual e valor-->
-        <div class="plan-box left"> <!-- Div referente ao objeto que vai ficar na esquerda, Icone de musica no caso-->
+        <div class="plan-box-left"> <!-- Div referente ao objeto que vai ficar na esquerda, Icone de musica no caso-->
           <img src="images/icon-music.svg" alt="Img music"> <!-- Imagem usada para o plano box-->
           
             <div>
@@ -33,7 +33,7 @@
         <a href="#">Change</a>
       </div>
       <a href="#" class="proced-btn">Proceed to Payment</a>  <!-- Processo de pagamento usando a.proced-btn-->
-      <a href="#" class="proced-cancel">Cancel Order</a>  <!-- processo de cancelamento usando a.proced-cancel-->
+      <a href="#" class="cancel-btn">Cancel Order</a>  <!-- processo de cancelamento usando a.proced-cancel-->
     </div> 
   </div>
 </body>
